Realizado el olvide mi contraseña

--- a/.env
+++ b/.env
@@ -12,3 +12,10 @@ DB_NAME=railway
 # DB_PORT=5432
 
 JWT_SECRET=94533847-6004-4500-a824-023581b76579
+
+# SMTP Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=softelevare@gmail.com
+SMTP_PASS=mvum cjjs mfqe uqfe
+FRONTEND_URL=http://localhost:5173/admin/reset-password.html
