--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3"
   }
 }
